src/test/ui/resolve/issue-3907-2.stderr
error[E0038]: the trait `issue_3907::Foo` cannot be made into an object
  --> $DIR/issue-3907-2.rs:11:12
   |
LL | fn bar(_x: Foo) {}
   |            ^^^ `issue_3907::Foo` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/auxiliary/issue-3907.rs:2:8
   |
LL |     fn bar();
   |        ^^^ the trait cannot be made into an object because associated function `bar` has no `self` parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
